--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,14 +36,14 @@ exclude = ["img/**", "*.md", "!CRATES.IO-README.md"]
 # ]
 
 [dependencies]
-image = "0.24.6"
-imageproc = "0.23.0"
+image = "0.25.1"
+imageproc = "0.24.0"
 nalgebra = "0.32.2"
 csscolorparser = "0.6.2"
 thiserror = "1.0.40"
 
-clap = { version = "4.2.7", features = ["derive"], optional = true }
-num_cpus = { version = "1.15.0", optional = true }
+clap = { version = "4.5.4", features = ["derive"], optional = true }
+num_cpus = { version = "1.16.0", optional = true }
 threadpool = { version = "1.8.1", optional = true }
 object-pool = { version = "0.5.4", optional = true }
 
@@ -67,3 +67,13 @@ required-features = ["build-bin"]
 [profile.dev]
 opt-level = 1
 overflow-checks = false
+
+[profile.release]
+opt-level = 3                     # 最高优化级别
+lto = true                        # 启用链接时优化（Link-Time Optimization）
+codegen-units = 1                 # 将代码生成单元的数量设置为1，以允许更大的内联和优化
+debug = false                     # 禁用调试信息，减少二进制大小，提高性能
+debug-assertions = false          # 禁用调试断言
+overflow-checks = false           # 关闭整数溢出检查
+panic = 'abort'                   # 使用abort模式处理panic，而不是 unwind，这通常更轻量级且更快
+incremental = false               # 禁用增量编译，以确保完全重新编译，这可能会提高优化效果
